# Teams

./: CMakeLists.txt  Makefile
client/: Makefile
client/class/inc/: my_map.h  my_string.h
client/class/src/: init_map.c  my_string.c  string_function.c  string_init_getter.c  string_init_setter.c  string_operator.c
client/inc/: client_header.h  features_map.h  tools.h
client/src/: check_new_input.c  create_cmd.c  main.c  run_client.c  user_function.c
client/src/tools/: convert.c  memory.c
libs/myteams/: logging_client.h  logging_server.h
server/: Makefile
server/include/: my_ftp.h
server/src/: client_linked_list.c  client_linked_list_bis.c  create_node.c  create_node_bis.c  getters.c  list.c  main.c  parser.c  parsing.c  server.c  utils.c  utils_bis.c
server/src/server_functions/: create.c  event.c  help.c  info.c  info_bis.c  list.c  login.c  logout.c  messages.c  send.c  subscribe.c  subscribed.c  unsubscribe.c  use.c  user.c  users.c
